<resources>
    <string name="app_name">SocIIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to side nav menu -->
    <string name="home">Home</string>
    <string name="my_activities">My Activities</string>
    <string name="buildings">Buildings</string>
    <string name="activities">Activities</string>
    <string name="news">News</string>
    <string name="about">About</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmation_password">Confirmation password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_go_to_register">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_confirmation_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_sign_out">Sign out</string>
    <string name="email_exists">Email already registered</string>

    <string name="social_network_preference">"Social Networks"</string>

    <string name="twitter">"Twitter"</string>
    <string name="twitter_message_in">"Click to sign in"</string>
    <string name="twitter_message_out">"Click to sign out"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
