<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_my_activities"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/my_activities"/>
        <item
            android:id="@+id/nav_buildings"
            android:icon="@drawable/ic_domain_black_24dp"
            android:title="@string/buildings"/>
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_local_play_black_24dp"
            android:title="@string/activities"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_new_releases_black_24dp"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about"/>
    </group>

</menu>
